--- a/models/request/_field_details.htm
+++ b/models/request/_field_details.htm
@@ -15,9 +15,17 @@
 <?php endif ?>
 
 <?php if ($formModel->phone): ?>
-    <div class="callout callout-info no-icon no-subheader">
+    <div class="callout callout-info no-icon no-subheader mb-2">
         <div class="header">
             <h3 class="oc-icon-phone"><?= e($formModel->phone) ?></h3>
+        </div>
+    </div>
+<?php endif ?>
+
+<?php if ($formModel->message): ?>
+    <div class="callout callout-info no-icon no-subheader">
+        <div class="header">
+            <h3 class="oc-icon-comment"><?= e($formModel->message) ?></h3>
         </div>
     </div>
 <?php endif ?>
